bugfix: markdown text was visible before page load

--- a/resources/public/style.less
+++ b/resources/public/style.less
@@ -143,7 +143,7 @@ textarea {
     font-size: 1em;
     height: 500px;
 }
-.hidden {
+.hidden, .markdown {
     display: none;
 }
 h1 {
